[project]
name = "ctrl_util"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]

[tool.ruff]
line-length = 119
indent-width = 4
target-version = "py312"

# Formatterの設定
[tool.ruff.format]
quote-style = "double"
